[package]
name = "tdx-guest"
version = "0.1.0"
edition = "2021"
description = "The tdx-guest provides a Rust implementation of Intel® Trust Domain Extensions (Intel® TDX) Guest APIs, supporting for TDX Guest specific instructions, structures and functions."
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x86_64 = "0.14.10"
bitflags = "1.3"
raw-cpuid = "10"
lazy_static = "1.4.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
