[package]
name = "tdx-guest"
version = "0.1.8"
edition = "2021"
description = "The tdx-guest provides a Rust implementation of Intel® Trust Domain Extensions (Intel® TDX) Guest APIs, supporting for TDX Guest specific instructions, structures and functions."
license = "BSD-3-Clause"
repository = "https://github.com/intel/tdx-guest"
authors = ["Hsy-Intel <siyuan.hui@intel.com>", "Edmund Song <edmund.song@intel.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x86_64 = "0.14.10"
bitflags = "1.3"
raw-cpuid = "10"
iced-x86 = { version = "1.21.0", default-features = false, features = [ "no_std", "decoder", "gas" ] }
